# HappyToGo

./: .gitignore  .input  .input.example  CHANGELOG.md  README.md  init.sh  pyproject.toml  requirements.txt  start.sh
AGENT/: cover_letter_creator.py  credit_author_statement_creator.py  highlight_creator.py  llm.py  title_creator.py
CLASSICS/: CoverLetter.docx  CreditAuthorStatement.docx  DeclarationStatement.docx  Highlight.docx  Title.docx
InfoCenter/: NameList.example.json  NameList.json  NameList.xlsx
STAGE/: app.py
STAGE/templates/: index.html
