[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "happytogo"
version = "0.0.1"
description = "Academic manuscript submission document generator"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "google-genai",
    "python-docx",
    "pypandoc",
    "openpyxl",
    "lxml",
    "tenacity",
]

[project.scripts]
happytogo = "STAGE.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["AGENT*", "STAGE*"]
